# sql

./: .env.example  .gitignore  BENCHMARK.fr.md  BENCHMARK.md  CODING.md  EXAMPLES.md  LICENSE  LISEZMOI.md  MODEDEMPLOI.md  PROS_CONS.md  README.md  TECHNICAL_STACK.md  USERGUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
backend/: __init__.py  build_db.py  db.py  eda_report.py  figures.py  llm.py  prompts.py  server.py  widen_db.py
backend/approaches/: __init__.py  base.py  langchain_sql.py  qwen_ollama.py  vanna_rag.py
eval/: __init__.py  bench_charts.py  benchmark.py  benchmark_heavy_sample.json  benchmark_light_sample.json  benchmark_results.json  benchmark_set.py  deepeval_metric.py  execution_match.py  giskard_scan.py  golden.py  run_eval.py
frontend/: app.js  i18n.js  index.html
locales/: i18n.yaml
scripts/: screenshots.py
tests/: __init__.py  conftest.py  test_approaches_and_figures.py  test_benchmark.py  test_db.py  test_eval_and_api.py  test_i18n.py  test_integration.py  test_widen_db.py
